tests/ui/issues/issue-22684.stderr
error[E0308]: mismatched types
  --> $DIR/issue-22684.rs:17:17
   |
LL |         fn bar(&self) -> bool { true }
   |                          ---- help: consider changing bar's return type: `()`
...
LL |     let _: () = foo::Foo.bar();
   |            --   ^^^^^^^^^^^^^^ expected `()`, found `bool`
   |            |
   |            expected due to this
   |
note: the method bar is defined here
  --> $DIR/issue-22684.rs:8:9
   |
LL |         fn bar(&self) -> bool { true }
   |         ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
